channel-sender/deploy_samples/k8s/libcluster-kubernetes/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: adfsender
  namespace: sendernm
  labels:
    app: adfsender
spec:
  selector:
    app: adfsender
  ports:
    - name: socket-http
      targetPort: 8082
      port: 8082
    - name: rest-http
      targetPort: 8081
      port: 8081        
---
## headless service to allow pod to pod comunication for epmd port
apiVersion: v1
kind: Service
metadata:
  name: adfsender-headless
  namespace: sendernm 
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: adfsender
  ports:
    - name: epmd-tcp
      port: 4369
      targetPort: 4369
      protocol: TCP     
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adfsender
  namespace: sendernm
  labels:
    app: adfsender
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adfsender
      cluster: beam
  serviceName: "adfsender-headless"
  template:
    metadata:
      annotations:
        ## annotations required for istio-proxy to detect ports
        traffic.sidecar.istio.io/includeOutboundPorts: "4369"
        traffic.sidecar.istio.io/includeInboundPorts: "4369, 8081, 8082"
      labels:
        app: adfsender
        cluster: beam
    spec:
      containers:
        - name: adfsender
          image: bancolombia/async-dataflow-channel-sender:0.1.5
          ports:
            - name: rest-http
              protocol: TCP
              containerPort: 8081
            - name: socket-http
              protocol: TCP
              containerPort: 8082
            - name: epmd-tcp
              protocol: TCP
              containerPort: 4369
          resources:
            requests:
              cpu: 250m
              memory: 150M
            limits:
              cpu: 250m
              memory: 250M
          volumeMounts:
          - name: config-volume
            mountPath: /app/config/env.sh
            subPath: env.sh
          - name: config-volume
            mountPath: /app/config/config.yaml
            subPath: config.yaml
      volumes:
        - name: config-volume
          configMap:
            name: adfsender-config
